[tool.poetry]
name = "arxiv_update_bot"
version = "0.8.0"
description = "A bot to monitor arXiv updates"
authors = ["Yoann Piétri <me@nanoy.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nanoy42/arxiv-update-bot"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering"
]
include = ["config.example.ini"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
feedparser = "^6.0.8"
pyTelegramBotAPI = "^3.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
arxiv-update-bot = 'arxiv_update_bot.main:main'

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"